# spp_weis_price_forecast

./: .gitignore  LICENSE  README.md  app.py  app.py.bak  app_shiny.py  databricks.yaml  manifest.json  pyproject.toml  requirements.txt  requirements_data_collection.txt  spp_trials.db  spp_trials.db.bak
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker.txt
.github/workflows/: daily-etl-trigger.yml  hourly-etl-trigger.yml  model-retrain-trigger.yml
deprecated/.streamlit/: config.toml
deprecated/jobs/: data_collection_lmp_5_min_job.py  data_collection_lmp_daily_job.py
deprecated/scripts/: model_retrain.py  model_retrain_mlflow.py
env/: create_conda.txt  create_venv.txt
jobs/: data_collection_5_min_job.py  data_collection_daily_job.py  data_collection_hourly_job.py  data_collection_lmp_5_min_job.py  data_collection_lmp_daily_job.py  model_retrain_job.py
modal_jobs/: data_collection.py  model_retrain.py
notebooks/app/: app_testing.ipynb  app_testing.py
notebooks/data_collection/: data_collection_5_min.ipynb  data_collection_5_min.py  data_collection_backfill.ipynb  data_collection_backfill.py  data_collection_daily.ipynb  data_collection_daily.py  data_collection_daily_serverless.ipynb  data_collection_hourly.ipynb  data_collection_hourly.py  data_collection_hourly_serverless.ipynb  data_collection_job.py  data_collection_rebuild.ipynb  data_collection_rebuild.py  data_collection_testing.ipynb  data_collection_testing.py  data_collection_weather.ipynb  data_collection_weather.py
notebooks/model_training/: darts_wrapper.py  final_model_training.ipynb  get_pred_plot.ipynb  global_model_training.ipynb  mlflow_log_register_jlf.ipynb  model.ipynb  model.py  model_ensemble.ipynb  model_ensemble.py  model_nixtla.ipynb  model_retrain.ipynb  model_retrain.py  model_training_validation.ipynb  requirements.txt
plans/: data_snapshots_metrics_champion.md  migrate_notebooks_to_marimo.md
scripts/: README.md  crontab_retrain.sh  model_retrain.ipynb  model_retrain.py  model_retrain.sh  model_retrain_marimo.ipynb  model_retrain_marimo.py  model_retrain_mlflow.py  r2_move_objects.py
scripts/data_collection/: data_collection_5_min.py  data_collection_daily.py  data_collection_hourly.py
src/: darts_wrapper.py  data_collection.py  data_engineering.py  modeling.py  parameters.py  params.py  plotting.py  utils.py
tests/: test_app.py  test_data_collection.py  test_data_engineering.py  test_modeling_load.py  test_utils_s3.py
tests/e2e/: app_for_test.py  conftest.py  test_app_e2e.py
tests/unit/: test_app.py  test_data_collection.py  test_data_engineering.py  test_modeling_load.py  test_utils_s3.py
(+5 files in other folders)
