[project]
name = "spp-weis-price-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.92",
    "darts==0.31.0",
    "duckdb==1.3.2",
    "ibis-framework[duckdb]==9.4.0",
    "jupyterlab>=4.5.2",
    "lightning>=2.6.0",
    "lightning-sdk>=2025.12.17",
    "mlflow==2.16.0",
    "optuna-dashboard>=0.20.0",
    "optuna-integration[pytorch-lightning]>=4.6.0",
    "pandas>=2.3.3",
    "plotly==5.24",
    "polars>=1.37.1",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit==1.38",
    "torch<2.6",
]
